--- a/css/contact.css
+++ b/css/contact.css
@@ -12,6 +12,8 @@ html {
 /* //HEADER SECTION// */
 header {
   background: linear-gradient(to right, #2bb7da, #31d35c);
+  position: sticky;
+  top: 0px;
 }
 nav {
   display: flex;
@@ -354,7 +356,7 @@ footer hr {
   .nav-links {
     position: absolute;
     margin-top: 2.76rem;
-    top: 17px;
+    top: 20px;
     right: 0;
     width: 100%;
     z-index: 100;
@@ -363,7 +365,7 @@ footer hr {
   li {
     display: none;
     padding: 0.6rem 1rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   .nav-checkbox:checked ~ .nav-links .nav-menu li {
     display: block;
@@ -377,7 +379,7 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background: linear-gradient(to right, #2bb7da, #31d35c);
     opacity: 1.5;
-    height: 52vh;
+    height: 55vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
