--- a/css/contact.css
+++ b/css/contact.css
@@ -145,6 +145,7 @@ nav {
   border: none;
   border-radius: 5px;
   margin-bottom: 2rem;
+  font-size: 1.2rem;
 }
 footer {
   background-color: black;
