--- a/css/sports.css
+++ b/css/sports.css
@@ -24,6 +24,7 @@ header {
   position: sticky;
   top: 0px;
   left: 0px;
+  z-index: 5;
 }
 nav {
   display: flex;
@@ -749,7 +750,7 @@ footer hr {
 
   li {
     display: none;
-    padding: 0.6rem 1rem;
+    padding: 0.2rem 1rem 0.2rem;
     font-size: 1.3rem;
   }
   .nav-checkbox:checked ~ .nav-links .nav-menu li {
