--- a/css/tidelabNews.css
+++ b/css/tidelabNews.css
@@ -14,6 +14,7 @@ header {
   position: sticky;
   top: 0px;
   left: 0px;
+  z-index: 5;
   margin-left: -0.39rem;
   margin-right: -0.39rem;
   margin-top: -0.45rem;
@@ -475,8 +476,8 @@ footer hr {
 
   li {
     display: none;
-    padding: 0.6rem 1rem;
-    font-size: 1.5rem;
+    padding: 0.2rem 1rem 0.2rem;
+    font-size: 1.3rem;
   }
   .nav-checkbox:checked ~ .nav-links .nav-menu li {
     display: block;
@@ -490,7 +491,7 @@ footer hr {
   .nav-checkbox:checked ~ .nav-links .nav-menu {
     background: linear-gradient(to right, #2bb7da, #31d35c);
     opacity: 1.5;
-    height: 52vh;
+    height: 55vh;
     padding-top: 2rem;
     border-radius: 3px;
   }
