--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,7 @@
 }
 html {
   scroll-behavior: smooth;
-  transition: 60s;
+  transition: 30s;
 }
 /* //HEADER SECTION// */
 header {
@@ -44,6 +44,7 @@ nav {
 .nav-menu {
   display: flex;
   list-style: none;
+  font-size: 1.3rem;
 }
 .nav-menu li:not(:last-child) {
   margin-right: 1.5rem;
@@ -69,9 +70,10 @@ nav {
 .nav-call-to-action a:first-child {
   padding: 0.5rem 0.5rem;
   margin-right: 0.2rem;
+  font-size: 1.3rem;
 }
 .nav-call-to-action a:last-child {
-  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.8rem 0.6rem 0.6rem 0.6rem;
 }
 .container {
   width: 95%;
@@ -324,9 +326,7 @@ footer hr {
 
 /* //RESPONSIVE DESIGN FOR THE HEADER AND FOOTER// */
 @media (max-width: 750px) {
-  header {
-    position: relative;
-  }
+  
   .header-logo {
     margin-left: -1.5rem;
   }
