--- a/editt.css
+++ b/editt.css
@@ -29,6 +29,7 @@ header {
   position: sticky;
   top: 0px;
   left: 0px;
+  z-index: 1;
 }
 nav {
   display: flex;
@@ -59,6 +60,7 @@ nav {
 .nav-menu {
   display: flex;
   list-style: none;
+  font-size: 1.3rem;
 }
 .nav-menu li:not(:last-child) {
   margin-right: 1.5rem;
@@ -84,11 +86,11 @@ nav {
 .nav-call-to-action a:first-child {
   padding: 0.5rem 0.5rem;
   margin-right: 0.2rem;
+  font-size: 1.3rem;
 }
 .nav-call-to-action a:last-child {
-  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.8rem 0.6rem 0.6rem 0.6rem;
 }
-
 /* Main Section here*/
 .hero-wrapper {
   background-color: #f3f4f6;
@@ -216,6 +218,7 @@ nav {
   justify-content: center;
   align-items: center;
   margin-top: 40px;
+  padding-bottom: 2rem;
 }
 .life {
   flex-direction: column;
@@ -537,6 +540,10 @@ footer hr {
   .field-two {
     margin-bottom: 1rem;
   }
+  .profile-image {
+    width: 40%;
+    height: 40%;
+  }
 }
 
 /*     background-color: #fff;*/
@@ -573,7 +580,6 @@ footer hr {
     flex-direction: column;
 
     background: linear-gradient(to right, #2bb7da, #31d35c);
-    padding: 20px;
     gap: 1rem;
     align-items: center;
     margin: 0.1rem 0;
@@ -584,7 +590,6 @@ footer hr {
     top: 20px;
     right: 0;
     width: 100%;
-    z-index: 100;
   }
 
   li {
@@ -669,9 +674,6 @@ footer hr {
     width: 30%;
     display: flex;
     flex-direction: column;
-
-    padding: 20px;
-
     align-items: flex-start;
     margin-left: 1.5rem;
   }
@@ -714,7 +716,5 @@ footer hr {
   .footer-social-links {
     width: 90%;
     margin-top: 1rem;
-    border-radius: 10px;
-    box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
   }
 }
